codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_compact_resume_restates_realtime_end_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"After remote manual /compact and resume, the first resumed turn rebuilds history from the compaction item and restates realtime-end instructions from reconstructed previous-turn settings.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Resume History Layout\", after_resume_request),])"
---
Scenario: After remote manual /compact and resume, the first resumed turn rebuilds history from the compaction item and restates realtime-end instructions from reconstructed previous-turn settings.

## Remote Compaction Request
00:message/developer[6]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [06] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Resume History Layout
00:compaction:encrypted=true
01:message/developer[6]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <realtime_conversation>\nRealtime conversation ended.\n\nSubsequ...
    [06] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:USER_TWO
