codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_manual_compact_restates_realtime_start_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote manual /compact while realtime remains active: the next regular turn restates realtime-start instructions after compaction clears the baseline.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_request),])"
---
Scenario: Remote manual /compact while realtime remains active: the next regular turn restates realtime-start instructions after compaction clears the baseline.

## Remote Compaction Request
00:message/developer[6]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [06] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:message/assistant:REMOTE_FIRST_REPLY

## Remote Post-Compaction History Layout
00:compaction:encrypted=true
01:message/developer[6]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [06] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:USER_TWO
