codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_manual_compact_with_history_shapes.snap
---
source: core/tests/suite/compact_remote.rs
assertion_line: 560
expression: "format_labeled_requests_snapshot(\"Remote manual /compact where remote compact output is compaction-only: follow-up layout uses the returned compaction item plus new user message.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", follow_up_request),])"
---
Scenario: Remote manual /compact where remote compact output is compaction-only: follow-up layout uses the returned compaction item plus new user message.

## Remote Compaction Request
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:hello remote compact
03:message/assistant:FIRST_REMOTE_REPLY

## Remote Post-Compaction History Layout
00:compaction:encrypted=true
01:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:after compact
