codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_mid_turn_compaction_summary_only_reinjects_context_shapes.snap
---
source: core/tests/suite/compact_remote.rs
assertion_line: 4205
expression: "format_labeled_requests_snapshot(\"Remote mid-turn compaction where compact output has only a compaction item: continuation layout reinjects context before that compaction item.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", &post_compact_turn_request),])"
---
Scenario: Remote mid-turn compaction where compact output has only a compaction item: continuation layout reinjects context before that compaction item.

## Remote Compaction Request
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:function_call/test_tool
04:function_call_output:unsupported call: test_tool

## Remote Post-Compaction History Layout
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:compaction:encrypted=true
