codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_pre_turn_compaction_context_window_exceeded_shapes.snap
---
source: core/tests/suite/compact_remote.rs
assertion_line: 3695
expression: "format_labeled_requests_snapshot(\"Remote pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.\",\n&[(\"Remote Compaction Request (Incoming User Excluded)\",\n&include_attempt_request),])"
---
Scenario: Remote pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.

## Remote Compaction Request (Incoming User Excluded)
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:message/assistant:REMOTE_FIRST_REPLY
