codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_pre_turn_compaction_including_incoming_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote pre-turn auto-compaction with a context override emits the context diff in the compact request while excluding the incoming user message.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", &requests[2]),])"
---
Scenario: Remote pre-turn auto-compaction with a context override emits the context diff in the compact request while excluding the incoming user message.

## Remote Compaction Request
00:message/developer[5]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:message/assistant:REMOTE_FIRST_REPLY
04:message/user:USER_TWO
05:message/assistant:REMOTE_SECOND_REPLY

## Remote Post-Compaction History Layout
00:message/user:USER_ONE
01:message/user:USER_TWO
02:compaction:encrypted=true
03:message/developer[5]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
04:message/user:<ENVIRONMENT_CONTEXT:cwd=PRETURN_CONTEXT_DIFF_CWD>
05:message/user:USER_THREE
